Site-wide switch from Stuypulse to StuyPulse

--- a/_posts/2013-12-12-stuy-splash-2013.md
+++ b/_posts/2013-12-12-stuy-splash-2013.md
@@ -3,4 +3,4 @@ layout: post
 title: Stuy Splash 2013!
 author: Justin Kim
 ---
-Stuypulse will be hosting our annual Stuy Splash this Saturday, December 14, in [Stuyvesant High School](http://stuypulse.com/contact/). Join us for a day of lectures and stories shared by speakers from the FIRST community. The event begins at 9 AM with registration and continues through 4 PM. Feel free to drop in and drop out as your schedule permits.
+StuyPulse will be hosting our annual Stuy Splash this Saturday, December 14, in [Stuyvesant High School](http://stuypulse.com/contact/). Join us for a day of lectures and stories shared by speakers from the FIRST community. The event begins at 9 AM with registration and continues through 4 PM. Feel free to drop in and drop out as your schedule permits.
