--- a/_posts/2016-11-25-stuy-splash-2016.md
+++ b/_posts/2016-11-25-stuy-splash-2016.md
@@ -3,4 +3,4 @@ layout: post
 title: StuySplash 2016
 author: Yedoh Kang
 ---
-Stuy Splash 2016 is back! Please click [HERE](http://stuypulse.com/resources/stuysplash2016) for more information.
+Stuy Splash 2016 is back! Please click [HERE](/resources/stuysplash2016) for more information.
