Update author of CRC 2017 post

--- a/_posts/2017-08-09-crc-2017-recap.md
+++ b/_posts/2017-08-09-crc-2017-recap.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: China Robotics Challenge 2017
-author: Yedoh Kang
+author: Eugene Seo
 ---
 Team members have finally come back from the CRC in China!
 We would like to congratulate Teams 1986, 4613, 6706, and 9067 for winning the finals at CRC!
