Add missing team to champs post

--- a/_posts/2018-04-30-champs.md
+++ b/_posts/2018-04-30-champs.md
@@ -5,7 +5,7 @@ author: Leilei Hao
 ---
 StuyPulse is back from World Championships!
 After 9 wins and 1 loss in the qualifiers, we placed 8th seed in the subdivision Archimedes.
-Along with team 2016 and team 1325, we completed during eliminations and got to semifinals!
+Along with teams 1325, 2016, and 870, we completed during eliminations and got to semifinals!
 Although we were unable to compete in Einstein, it was a wonderful experience for everyone, and we are extremely grateful to play at championships for our third year in a row.
 
 To conclude our fruitful season, we will be competing at the BattleCry Offseason Regional.
