--- a/_posts/2018-04-30-champs.md
+++ b/_posts/2018-04-30-champs.md
@@ -8,7 +8,7 @@ After 9 wins and 1 loss in the qualifiers, we placed 8th seed in the subdivision
 Along with teams 1325, 2016, and 870, we completed during eliminations and got to semifinals!
 Although we were unable to compete in Einstein, it was a wonderful experience for everyone, and we are extremely grateful to play at championships for our third year in a row.
 
-To conclude our fruitful season, we will be competing at the BattleCry Offseason Regional.
+To conclude our fruitful season, we will be competing at the BattleCry Offseason Event.
 A huge shoutout to all our mentors, coaches, parents, and everyone that helped us get to where we are today.
 We couldn't have done it without you guys!
 
