Change title of post

--- a/_posts/2018-06-30-highlights-2018.md
+++ b/_posts/2018-06-30-highlights-2018.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 2017-2018 Season Highlights
+title: 2018 Season Highlights
 author: Areyan Kayum
 ---
 We had an amazing season this year, click [here](https://drive.google.com/file/d/1cWc03xZkgnpn_7sXN8zM6l9YCQYb9AHb/view?usp=sharing) to check out the highlights!
